recursion.lessons.recursion.koch.Koch.scala.error
Koch:19: error: ';' expected but ')' found.
    		snowSide(levels - 1, length/3));
                                              ^