recursion.lessons.recursion.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    droite(120);
    setColor(Color.blue);
    snowSide(levels, length);
    droite(120);
    setColor(Color.orange);
    snowSide(levels, length);
    droite(120);
}
def snowSide(levels:Int, length:Double) {
    
    
    
    if(levels != 0)
    {
    		
    		snowSide(levels - 1, length/3));
    		gauche(60);
    		snowSide(levels - 1, length/3);
    		droite(120);
    		snowSide(levels - 1, length/3);
    		gauche(60);
    		snowSide(levels - 1, length/3);
    }
    else
    {
    	avance(length);
    	return ;
    }

}
